z-index fixed, modal fixed, color changes added to all things in user table, added css classes to everything

--- a/waspp-ui/src/components/EditUser/EditBonuses/EditBonuses.css
+++ b/waspp-ui/src/components/EditUser/EditBonuses/EditBonuses.css
@@ -5,7 +5,7 @@
     border-radius: 5px;
     align-content: center;
     padding: 43px 10px;
-    margin: 4.3% 3% 4.3% 0%;
+    margin: 4.3% 3% 4.3% 0;
     background-color: #66b3cc;
     transform: translateY(-20px);
 }
