--- a/waspp-ui/src/components/UI/Table/Table.css
+++ b/waspp-ui/src/components/UI/Table/Table.css
@@ -14,6 +14,8 @@
     color: white;
     text-decoration: none;
     font-weight: 400;
+    background-color: #006699;
+    transform: translateY(-3px);
 }
 
 tbody tr:hover{
